# ticketing-service

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/ticketing_service/: __init__.py  config.py  main.py  models.py  repositories.py  run.py
src/ticketing_service/api/: __init__.py  runtime.py  schemas.py  validation.py
tests/: test_integration.py  test_models.py  test_rate_limiter.py  test_repositories.py  test_schemas.py  test_stress_memory.py  test_stress_scalability.py
