[project]
name = "ticketing-service"
version = "0.1.0"
description = "FastAPI service for ticketing."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ticketing_service"]
